--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "homepage": "https://hamzaalam.github.io/react-quiz-app/",
   "name": "react-quiz-app",
   "version": "0.1.0",
-  "private": true,
+  "private":false,
   "dependencies": {
     "@material-ui/core": "^4.9.12",
     "@material-ui/icons": "^4.9.1",
